# app/Http/Controllers/StudentController.php
@@ -3,6 +3,7 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers;
 
+use App\Http\Dto\Request\IdRequestDto;
 use App\Http\Dto\Request\StudentListRequestDto;
 use App\Http\Dto\Response\StudentResponseDto;
 use App\Http\Dto\Response\StudentWithClassResponseDto;
@@ -13,12 +14,12 @@ use App\Schema\BaseResource;
 use App\Schema\Component\ClassMethod;
 use App\Schema\Get;
 use App\Schema\PageResource;
+use App\Schema\Property;
 use OpenApi\Attributes\JsonContent;
-use OpenApi\Attributes\Property;
 use OpenApi\Attributes\RequestBody;
 use OpenApi\Attributes\Tag;
 
-#[Tag(self::TAG)]
+#[Tag(self::TAG, description: '学生管理')]
 class StudentController
 {
     public const TAG = 'student';
@@ -37,12 +38,11 @@ class StudentController
     }
 
     #[Get(classMethod: new ClassMethod(self::class, __FUNCTION__), description: '详情', tags: [self::TAG])]
-    #[RequestBody(content: new JsonContent(properties: [
-        new Property(property: 'id', title: '学生id', type: 'integer')
-    ]))]
+    #[RequestBody(content: new IdRequestDto())]
     #[SuccessResponse(content: new BaseResource(StudentWithClassResponseDto::class, false))]
-    public function detail(): array
+    public function detail(SwaggerRequest $request): array
     {
-        return BaseResource::format(Student::find(1)->toDto());
+        $id = $request->toDto(IdRequestDto::class);
+        return BaseResource::format(Student::find($id->id)->toDto());
     }
 }
